[package]
name = "eikon"
version = "0.0.1"
edition = "2021"
authors = ["erik9631@gmail.com"]
description = "High performance rendering engine. Supports both CPU and GPU rendering"
license-file = "license.txt"
readme = "README.MD"
repository = "https://github.com/erik9631/Eikon"
build = "build.rs"

[dependencies]
winit = "0.30.5"
eta-graph = "1.0.1"
eta-algorithms = "1.5.4"
nalgebra = "0.33.0"
ash = "0.38.0"

[[bin]]
build = "build.rs"
name = "eikon"
path = "src/main.rs"